feat(security): implement rate limiting, sentry PII masking, CORS hardening, and unit tests